desestructuración de objetos

--- a/Curso_JS_moderno/01-fundamentos/index.html
+++ b/Curso_JS_moderno/01-fundamentos/index.html
@@ -24,7 +24,8 @@
   <!--  <script src="assets/js/palabras-reservadas.js"></script> -->
    <!-- <script src="assets/js/arrays.js"></script> -->
    <!-- <script src="assets/js/arrays2.js"></script> -->
-   <script src="assets/js/objeto-literal.js"></script>
+   <!-- <script src="assets/js/objeto-literal.js"></script> -->
+   <script src="assets/js/protip-retorno.js"></script>
 
 </body>
 </html>
