--- a/Curso_JS_moderno/02-blackjack/index.html
+++ b/Curso_JS_moderno/02-blackjack/index.html
@@ -12,9 +12,9 @@
 
     <div class="row mt-2">
         <div class="col text-center">
-            <button class="btn btn-ranger">Nueva carta</button>
-            <button class="btn btn-primary">Pedir carta</button>
-            <button class="btn btn-primary">Detener</button>
+            <button id="btnNuevo" class="btn btn-ranger">Nueva carta</button>
+            <button id="btnPedir" class="btn btn-primary">Pedir carta</button>
+            <button id="btnDetener" class="btn btn-primary">Detener</button>
         </div>
     </div>
     <div class="row container">
