--- a/Curso_JS_moderno/02-blackjack/index.html
+++ b/Curso_JS_moderno/02-blackjack/index.html
@@ -21,10 +21,10 @@
         <div class="col">
             <h1>Jugador 1 - <small>0</small></h1>
             <div id="jugador-cartas">
+                <!-- <img class="carta" src="assets/cartas/10C.png">
                 <img class="carta" src="assets/cartas/10C.png">
                 <img class="carta" src="assets/cartas/10C.png">
-                <img class="carta" src="assets/cartas/10C.png">
-                <img class="carta" src="assets/cartas/10C.png">
+                <img class="carta" src="assets/cartas/10C.png"> -->
             </div>
         </div>
     </div>
@@ -32,10 +32,10 @@
         <div class="col">
             <h1>Computadora - <small>0</small></h1>
             <div id="computadora-cartas">
+               <!--  <img class="carta" src="assets/cartas/3C.png">
                 <img class="carta" src="assets/cartas/3C.png">
                 <img class="carta" src="assets/cartas/3C.png">
-                <img class="carta" src="assets/cartas/3C.png">
-                <img class="carta" src="assets/cartas/3C.png">
+                <img class="carta" src="assets/cartas/3C.png"> -->
             </div>
         </div>
     </div>
