--- a/Curso_JS_moderno/02-blackjack/index.html
+++ b/Curso_JS_moderno/02-blackjack/index.html
@@ -55,7 +55,7 @@
     <script>
     
         // inicializarJuego();
-        console.log( miModulo );
+        /* console.log( miModulo ); */
 
         document.querySelector('#btnNuevo').addEventListener('click', () => {
             miModulo.nuevoJuego();
